memory reduced and tested in PWS